deployment/result-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: results-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: results-app
  template:
    metadata:
      labels:
        app: results-app
    spec:
      containers:
      - name: results-app
        image: ${APP_IMAGE_RESULT}:${APP_TAG}
        resources:
          limits:
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
