deployment/vote-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-app
  template:
    metadata:
      labels:
        app: vote-app
    spec:
      containers:
      - name: vote-app
        image: ${VOTE_APP}:${APP_TAG}
        resources:
          limits:
            memory: "256Mi"
            cpu: "150m"
        ports:
        - containerPort: 80
