deployment/vote-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-worker
spec:
  selector:
    matchLabels:
      app: vote-worker
  template:
    metadata:
      labels:
        app: vote-worker
    spec:
      containers:
      - name: vote-worker
        image: ${APP_IMAGE_VOTE_WORKER}:${APP_TAG}
        resources:
          limits:
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
