deployment/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis01
spec:
  selector:
    app: redis-app
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
  type: ClusterIP
