deployment/result-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: results-app-service
spec:
  selector:
    app: results-app
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 80
  type: ClusterIP
