deployment/vote-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-app-service
spec:
  selector:
    app: vote-app
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 80
  type: ClusterIP
