deployment/vote-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-service
spec:
  selector:
    app: vote-worker
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
