deployment/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dev
  labels:
    name: ingress-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ${IP_PROD1}
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: vote-app-service
            port:
              number: 8081
      - path: "/results"
        pathType: Prefix
        backend:
          service:
            name: results-app-service
            port:
              number: 8082
